[package]
name = "ascii"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16.0", features = ["crossterm"] }
crossterm = { version = "0.22" }
log = "0.4.14"
simple_logger = { version = "2.1.0", features = ["stderr"] }
nokhwa = { version = "0.9.4", features= ["input-v4l"] }
bytes = "1.1.0"
image = "0.24.0"
clap = { version = "3.0", features = ["derive"] }
